--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "build": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=build/index.js --minify --sourcemap",
-    "dev": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=build/index.js --watch"
+    "build:test": "esbuild src/test.ts --bundle --platform=node --format=esm --outfile=build/test.js --minify --sourcemap",
+    "dev": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=build/index.js --watch",
+    "dev:test": "esbuild src/test.ts --bundle --platform=node --format=esm --outfile=build/test.js --watch"
   },
   "keywords": [],
   "author": "",
