--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shell-mcp",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "a shell executor for Model Context Protocol",
   "main": "index.js",
   "type": "module",
   "bin": {
