--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell-mcp",
+  "name": "@qingyingliu/shell-mcp",
   "version": "1.0.1",
   "description": "a shell executor for Model Context Protocol",
   "main": "index.js",
