chore: update package name and related references
Remove the npm organization scope from the package name in package.json and update the corresponding reference in README.md to reflect the change. This simplifies the package name and makes it more straightforward for users to reference.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qingyingliu/shell-mcp",
+  "name": "shell-mcp",
   "version": "1.0.1",
   "description": "a shell executor for Model Context Protocol",
   "main": "index.js",
